--- a/srcs/requirements/bonus/service/index.html
+++ b/srcs/requirements/bonus/service/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Showcase</title>
+    <title>souaammo</title>
 </head>
 <body>
     <h1>Hello! This is my static showcase site.</h1>
