--- a/srcs/requirements/bonus/website/index.html
+++ b/srcs/requirements/bonus/website/index.html
@@ -1,9 +1,70 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>souaammo</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Samir Ouaammou - Portfolio</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f9;
+            color: #333;
+            margin: 0;
+            padding: 0;
+        }
+        .container {
+            max-width: 800px;
+            margin: 50px auto;
+            background-color: #fff;
+            padding: 30px;
+            border-radius: 10px;
+            box-shadow: 0 0 15px rgba(0,0,0,0.1);
+        }
+        h1 {
+            text-align: center;
+            color: #222;
+        }
+        p {
+            line-height: 1.6;
+            font-size: 16px;
+        }
+        .links {
+            margin-top: 20px;
+            text-align: center;
+        }
+        .links a {
+            display: inline-block;
+            margin: 0 10px;
+            padding: 10px 15px;
+            text-decoration: none;
+            color: #fff;
+            background-color: #0077b5; /* LinkedIn color */
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+        .links a.github {
+            background-color: #333; /* GitHub color */
+        }
+        .links a:hover {
+            opacity: 0.8;
+        }
+    </style>
 </head>
 <body>
-    <h1>Hello! Samir Ouaammou</h1>
+    <div class="container">
+        <h1>Hi, I'm Samir Ouaammou</h1>
+        <p>
+            I am a student at 1337 Programming School in Morocco 🇲🇦, deeply passionate about coding and always on the lookout for the next big thing in tech 🚀.
+            I’m constantly diving into the latest programming trends and hands-on projects that push my problem-solving skills and technical expertise to the next level 💡.
+            I love engaging in technical discussions and collaborating on cutting-edge projects to refine my abilities 🔧.
+            With a special focus on algorithms, full-stack development, and writing efficient code, I’m always exploring new areas of programming 🌱.
+            Driven by a hunger for growth, I aim to make a real impact in the tech community with meaningful, innovative solutions 💻.
+            Let’s connect and build something amazing together! 🤝
+        </p>
+        <div class="links">
+            <a href="https://github.com/samir-ouaammou" class="github" target="_blank">GitHub</a>
+            <a href="https://www.linkedin.com/in/samir-ouaammou-53a1b5333/" target="_blank">LinkedIn</a>
+        </div>
+    </div>
 </body>
 </html>
