Finish static-website container

--- a/srcs/requirements/bonus/static-website/index.html
+++ b/srcs/requirements/bonus/static-website/index.html
@@ -38,12 +38,12 @@
             padding: 10px 15px;
             text-decoration: none;
             color: #fff;
-            background-color: #0077b5; /* LinkedIn color */
+            background-color: #0077b5;
             border-radius: 5px;
             transition: background-color 0.3s;
         }
         .links a.github {
-            background-color: #333; /* GitHub color */
+            background-color: #333;
         }
         .links a:hover {
             opacity: 0.8;
